# stdgba

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  docs.yml
benchmarks/: CMakeLists.txt  bench.hpp  bench_angle.cpp  bench_codegen.cpp  bench_codegen_arm_wrappers.cpp  bench_codegen_complex.cpp  bench_div.cpp  bench_ecs.cpp  bench_ecs_debug.cpp  bench_fixed_point.cpp  bench_format.cpp  bench_inline.cpp  bench_inline_memcmp.cpp  bench_lmul.cpp  bench_memcmp.cpp  bench_memcpy.cpp  bench_memmove.cpp  bench_memset.cpp  bench_music.cpp  bench_string.cpp  bench_text2_render.cpp  bench_text_compare.cpp  bench_text_render.cpp
benchmarks/support/: agbabi_memcpy_ref.s  agbabi_memset_ref.s
book/: book.toml
book/demos/: CMakeLists.txt  bg_2x1.tga  demo_colors.cpp  demo_embed_fonts.cpp  demo_embed_fonts_text2.cpp  demo_embed_sprite.cpp  demo_green_lo.cpp  demo_hello_audio.cpp  demo_hello_audio_wav.cpp  demo_hello_graphics.cpp  demo_hello_keypad.cpp  demo_hello_vblank.cpp  demo_keypad_buttons.cpp  demo_mode3_pixel.cpp  demo_shapes.cpp  demo_tetris.cpp  demo_text_render.cpp  demo_tiles.cpp  demo_timer_clock.cpp  demo_wav.cpp  screenshot.bat  screenshot.lua  screenshot.ps1  sprite.tga
book/src/: SUMMARY.md  custom.css  introduction.md
book/src/advanced/: bios.md  codegen.md  compression.md  ecs.md  embed.md  formatting.md  gdb-pretty-printers.md  green-low-bit.md  logging.md  memory.md  overlays.md  runtime-codegen.md  save.md  testing.md  undocumented.md
book/src/audio/: channel-noise.md  channel-sq1.md  channel-sq2.md  channel-wav.md  index.md  music.md  wav-embed.md
book/src/bios/: affine.md  compression.md  index.md  math.md  memory.md  sync-and-power.md
book/src/concepts/: angles.md  bios.md  fixed-point.md  interrupts.md  key-input.md  registers.md  timers.md
book/src/ecs/: architecture.md  index.md  internal-implementation.md
book/src/getting-started/: hello-audio.md  hello-graphics.md  hello-vblank.md  setting-up.md
book/src/graphics/: colors.md  dma.md  embed-animated.md  embed-fonts.md  embed.md  functional.md  shapes.md  sprites.md  text-rendering.md  tiles.md  video-modes.md
book/src/reference/: embed-sheet.md  embed-sprite.md  keypad.md  music-player.md  object-affine.md  object.md  peripherals.md
book/src/reference/peripherals/: backgrounds.md  color-effects.md  dma.md  interrupts.md  keypad.md  lcd.md  mosaic.md  serial.md  sound.md  system.md  timers.md  undocumented.md  video-memory.md  windowing.md
book/src/utilities/: dma.md  functional.md  memory.md  shapes.md
gdb/: angle.py  benchmark.py  fixed_point.py  format.py  interrupt.py  key.py  keyinput.py  log.py  memory.py  music.py  registral.py  stdgba.py  timer.py  video.py
include/gba/: angle  args  benchmark  bios  codegen  color  compress  dma  ecs  embed  filter  fixed_point  format  functional  interrupt  keyinput  logger  memory  music  overlay  peripherals  save  shapes  sprite  testing  text  text2  text2_format  text_format  timer  video
include/gba/bits/: bios.hpp  constexpr_trig.hpp  flipbook.hpp  font_3x5.hpp  handler.hpp  handler.tpp  int_util.hpp  min_heap.hpp  ranges.hpp  registral_ops.hpp  registral_ops.tpp  shapes_impl.hpp  sprite4_data.hpp
include/gba/bits/angle/: angle_base.hpp  angle_literal.hpp  angle_util.hpp  packed_angle.hpp
include/gba/bits/codegen/: compiler.hpp  encoder.hpp  patch_args.hpp
include/gba/bits/ecs/: entity.hpp  group.hpp  group_metadata.hpp  registry.hpp
include/gba/bits/eeprom/: detail.hpp  eeprom_512b.hpp  eeprom_8k.hpp  eeprom_base.hpp
include/gba/bits/embed/: bdf.hpp  bdf_pack.hpp  bdf_parse.hpp  bdf_types.hpp  common.hpp  image.hpp  png.hpp  png_chunks.hpp  png_convert.hpp  png_deflate.hpp  (+8 more)
source/: assert.cpp  assert_entry.S  assert_entry.s  codegen_patches.s  crash_screen.hpp  div.s  divzero.cpp  divzero_entry.s  flash.s  flash_ops.cpp  format_digits.s  interrupt.cpp  ldiv.s  memchr.s  memcmp.cpp  memcmp.s  memcpy.cpp  memcpy.s  memmove.cpp  memmove.s  memset.cpp  memset.s  strchr.s  strcmp.s  strlen.s  testing.cpp
tests/: CMakeLists.txt  mgba.c  mgba_test.hpp  mgba_test_macros.hpp
tests/angle/: test_angle.cpp
tests/bench/: agbabi_div_ref.s  agbabi_lmul_ref.s  agbabi_memmove_ref.s  bench.hpp  newlib_memcmp_ref.s  test_bench_div.cpp  test_bench_inline.cpp  test_bench_inline_memcmp.cpp  test_bench_lmul.cpp  test_bench_memcmp.cpp  test_bench_memcpy.cpp  test_bench_memmove.cpp  test_bench_memset.cpp  test_bench_string.cpp
tests/bios/: test_compress.cpp  test_cpu_set.cpp  test_halt.cpp  test_math.cpp  test_register_ram_reset.cpp  test_soft_reset.cpp  test_vblank.cpp
tests/codegen/: test_codegen.cpp
tests/compress/: test_bitpack.cpp  test_huffman.cpp  test_lz77.cpp  test_rle.cpp
tests/debug/: test_assert.cpp  test_debug.cpp  test_logger.cpp  test_pretty_printers.cpp
tests/div/: test_div.cpp  test_divzero.cpp
tests/dma/: test_dma.cpp
tests/ecs/: test_ecs.cpp  test_ecs_groups.cpp
tests/eeprom/: test_eeprom_512b.cpp  test_eeprom_8k.cpp
tests/embed/: test_embed.cpp
tests/filter/: test_diff_filter.cpp
tests/fixed_point/: test_16bit_fastpath.cpp  test_basic_converters.cpp  test_conversions.cpp  test_fixed_literal.cpp  test_minimal_api.cpp
tests/flash/: test_flash_atmel.cpp  test_flash_ops.cpp  test_flash_standard.cpp
tests/format/: test_format.cpp
tests/keyinput/: test_keyinput.cpp
tests/memory/: test_bitpool.cpp  test_handler.cpp  test_memcmp.cpp  test_memcpy.cpp  test_memmove.cpp  test_memmove_inline.cpp  test_memset.cpp  test_plex.cpp
tests/overlay/: overlay_code.cpp  test_overlay.cpp
tests/shapes/: test_shapes.cpp
tests/sound/: test_music.cpp  test_sound.cpp
tests/string/: test_memchr.cpp  test_strchr.cpp  test_strcmp.cpp  test_strlen.cpp
tests/testing/: test_testing.cpp
tests/text/: test_text.cpp  test_text_render.cpp  test_text_scaffold.cpp
tests/text2/: test_text2_render.cpp  test_text2_scaffold.cpp
tests/timer/: test_benchmark.cpp  test_compile_timer.cpp  test_make_timer.cpp  test_timer_copy.cpp
tests/video/: test_video.cpp
(+58 files in other folders)
