find_package(librom REQUIRED)

file(GLOB_RECURSE BENCH_SOURCES bench_*.cpp)

foreach(bench_src ${BENCH_SOURCES})
    get_filename_component(bench_name ${bench_src} NAME_WE)
    add_executable(${bench_name} ${bench_src})


    if(bench_name STREQUAL "bench_memcpy")
        target_sources(${bench_name} PRIVATE agbabi_memcpy_ref.s)
    endif()
    if(bench_name STREQUAL "bench_div")
        target_sources(${bench_name} PRIVATE agbabi_div_ref.s)
    endif()
    if(bench_name STREQUAL "bench_lmul")
        target_sources(${bench_name} PRIVATE agbabi_lmul_ref.s)
    endif()
    if(bench_name STREQUAL "bench_memset")
        target_sources(${bench_name} PRIVATE agbabi_memset_ref.s)
    endif()
    if(bench_name STREQUAL "bench_memcmp")
        target_sources(${bench_name} PRIVATE newlib_memcmp_ref.s)
    endif()
    if(bench_name STREQUAL "bench_memmove")
        target_sources(${bench_name} PRIVATE agbabi_memmove_ref.s agbabi_memcpy_ref.s)
    endif()

    target_link_libraries(${bench_name} PRIVATE librom stdgba)
    target_include_directories(${bench_name} PRIVATE .)
    target_compile_options(${bench_name} PUBLIC -O3 -g3 -Wno-psabi)
    if(bench_name STREQUAL "bench_music")
        target_compile_options(${bench_name} PRIVATE -ftemplate-depth=2000 -fconstexpr-loop-limit=10000000 -fconstexpr-ops-limit=5000000000)
    endif()
endforeach()
